<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detailsScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="vertical"
        android:useDefaultMargins="true" >

    <TextView
        android:id="@+id/nameLabelTextView"
        style="@style/MovieLabelTextView"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/label_name" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_column="1"
        android:layout_row="0"
        style="@style/MovieTextView" />

    <TextView
        android:id="@+id/directorLabelTextView"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/label_producer"
        style="@style/MovieLabelTextView" />

    <TextView
        android:id="@+id/directorTextView"
        android:layout_column="1"
        android:layout_row="1"
        style="@style/MovieTextView" />

    <TextView
        android:id="@+id/producerLabelTextView"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/label_director"
        style="@style/MovieLabelTextView" />

    <TextView
        android:id="@+id/producerTextView"
        android:layout_column="1"
        android:layout_row="2"
        style="@style/MovieTextView" />
    
    <TextView
        android:id="@+id/writterLabelTextView"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/label_writter"
        style="@style/MovieLabelTextView" />

    <TextView
        android:id="@+id/writterTextView"
        android:layout_column="1"
        android:layout_row="3"
        style="@style/MovieTextView" />
    
    <TextView
        android:id="@+id/countryLabelTextView"
        android:layout_column="0"
        android:layout_row="4"
        android:text="@string/label_country"
        style="@style/MovieLabelTextView" />

    <TextView
        android:id="@+id/countryTextView"
        android:layout_column="1"
        android:layout_row="4"
        style="@style/MovieTextView" />

    <TextView
        android:id="@+id/languageLabelTextView"
        android:layout_column="0"
        android:layout_row="5"
        android:text="@string/label_language"
        style="@style/MovieLabelTextView" />

    <TextView
        android:id="@+id/languageTextView"
        android:layout_column="1"
        android:layout_row="5"
        style="@style/MovieTextView" />
    
    <TextView
        android:id="@+id/bugetLabelTextView"
        android:layout_column="0"
        android:layout_row="6"
        android:text="@string/label_budget"
        style="@style/MovieLabelTextView" />

    <TextView
        android:id="@+id/budgetTextView"
        android:layout_column="1"
        android:layout_row="6"
        style="@style/MovieTextView" />
</GridLayout>

</ScrollView>
